--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "cookies-next": "^4.0.0",
+    "dayjs": "^1.11.10",
     "lucide-react": "^0.285.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
