--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.10.7",
@@ -29,11 +30,13 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "cookies-next": "^4.0.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.285.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-day-picker": "^8.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
