--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
@@ -41,11 +40,11 @@
     "react-day-picker": "^8.9.0",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
-    "react-redux": "^8.1.3",
     "react-use": "^17.4.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
