--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookies-next": "^4.0.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.285.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
