--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,11 @@
 {
-  "endOfLine": "lf",
+  "endOfLine": "auto",
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma":"es5",
+  "trailingComma": "es5",
   "printWidth": 80,
-  "plugins": ["@ianvs/prettier-plugin-sort-imports"]
+  "plugins": [
+    "@ianvs/prettier-plugin-sort-imports"
+  ]
 }
